Bug 420794 - Ctags indexing broken
Summary: Ctags indexing broken
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.04.0
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-04-30 10:10 UTC by Propella
Modified: 2020-05-09 15:29 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.04.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Propella 2020-04-30 10:10:26 UTC
SUMMARY
I have a c++ kate session with an existing ctags database. When trying to update the db, I receive an error saying that ctags can't be executed. It was working before and I my ctags installation is valid.
My bet is, the problem was introduced with this commit:
https://cgit.kde.org/kate.git/commit/addons/kate-ctags?id=30bde6d47a8727347f6deaa4b318669d078f85d2


STEPS TO REPRODUCE
1. Open an new session
2. Enable ctags-addon
3. Open the ctags-Toolbox
4. Add a folder containing c++ source files
5. Update index

OBSERVED RESULT
Message window popping up, saying that ctags can't be executed.

EXPECTED RESULT
Updated ctags database

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: KDE neon 5.18 
KDE Plasma Version: 5.18.4
KDE Frameworks Version: 5.69.0
Qt Version: 5.14.2

ADDITIONAL INFORMATION
Ctags-version: Exuberant Ctags 5.9~svn20110310

Error message (German version, stripped personal information):
„ctags -R --c++-types=+px --extra=+q --excmd=pattern --exclude=Makefile --exclude=. -f /home/XXXXX/.local/share/kate/katectags/session_db_20180322_192630 /home/XXXXX/code/XXXXX “ kann nicht ausgeführt werden. Exit-Status = 0
Comment 1 Kåre Särs 2020-05-08 10:32:44 UTC
Git commit 2b2aea6c1ecebb704e52ef269a3a1ca77cae32c8 by Kåre Särs.
Committed on 08/05/2020 at 10:29.
Pushed by sars into branch 'release/20.04'.

Properly port away from deprecated QProcess::start()

M  +4    -2    addons/kate-ctags/kate_ctags_plugin.cpp
M  +4    -3    addons/kate-ctags/kate_ctags_view.cpp

https://invent.kde.org/kde/kate/commit/2b2aea6c1ecebb704e52ef269a3a1ca77cae32c8
Comment 2 Kåre Särs 2020-05-08 10:34:02 UTC
Thanks for the report :)