Properly port away from deprecated QProcess::start()

BUG: 420794