addons/kate-ctags/kate_ctags_view.cpp
@@ -514,9 +514,10 @@ void KateCTagsView::updateSessionDB()
         return;
     }
 
-    QString command = QStringLiteral("%1 -f %2 %3").arg(m_ctagsUi.cmdEdit->text(), m_ctagsUi.tagsFile->text(), targets);
-
-    m_proc.start(command, QStringList());
+    QString commandLine = QStringLiteral("%1 -f %2 %3").arg(m_ctagsUi.cmdEdit->text(), m_ctagsUi.tagsFile->text(), targets);
+    QStringList arguments = commandLine.split(QLatin1Char(' '));
+    QString command = arguments.takeFirst();
+    m_proc.start(command, arguments);
 
     if (!m_proc.waitForStarted(500)) {
         KMessageBox::error(nullptr, i18n("Failed to run \"%1\". exitStatus = %2", command, m_proc.exitStatus()));
